summative.moria.Moria.scala.error
Compilation error:
Moria:49: error: value unary_! is not a member of java.awt.Color
while (!getCouleurSol()!=Color.GREEN)
       ^